--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             background-image: url('tjantik_icon.png'); /* Default image for desktop */
             background-size: cover;
             background-position: center;
-            height: 100vh; /* Full viewport height */
+            height: 100vh; 
             width: 100%;
             display: flex;
             align-items: center;
@@ -72,6 +72,10 @@
         @media (max-width: 768px) {
             .image-hero {
                 background-image: url('logotjantik.jpg'); /* Image for mobile */
+                background-size: cover;
+                background-position: center;
+                height: 100vh;
+                width: 100vw; 
             }
         }
 
