--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
             }
 
             .sejarah-content h2 {
-                font-size: 2rem;
+                font-size: 12px;
             }
 
             .sejarah-content p {
-                font-size: 1rem;
+                font-size: 10px;
             }
         }
 
