--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         /* Global Styles */
         body {
+            overflow-x :hidden; 
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
