--- a/index.html
+++ b/index.html
@@ -149,12 +149,30 @@
             }
 
             .sejarah-content h2 {
-                font-size: 12px;
+                font-size: 16px;
             }
 
             .sejarah-content p {
-                font-size: 10px;
+                font-size: 14px;
             }
+
+            .vision h2, .mission h2 {
+            font-size: 16px; 
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 20px;
+            }
+
+            .vision ul, .mission ul {
+                list-style: none;
+                padding-left: 0;
+            }
+
+            .vision li, .mission li {
+                font-size: 14px;
+                margin: 10px 0;
+            }
+            
         }
 
     </style>
