--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         /* Global Styles */
         body {
+            overflow-x :hidden; 
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
@@ -73,6 +74,9 @@
             .image-hero {
                 background-image: url('logotjantik.jpg'); /* Image for mobile */
             }
+
+            body {
+                overflow-x :hidden; 
         }
 
         /* Sejarah Section */
