--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             body, html {
                 height: 100%; /* Ensure full height for body and html */
                 overflow: hidden; /* Prevent scrolling */
+                scroll-behavior: smooth;
             }
         }
 
