--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
                 width: 100vw;  /* Full viewport width */
             }
 
-            body, html {
+            body {
                 height: 100%; /* Ensure full height for body and html */
                 overflow: hidden; /* Prevent scrolling */
+            }
+            html{
                 scroll-behavior: smooth;
             }
         }
