--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         /* Media Query for Mobile */
         @media (max-width: 768px) {
             .image-hero {
-                background-image: url('logotjantik.jpg'); /* Image for mobile */
+                background-image: url('logotjantik.png'); /* Image for mobile */
                 background-size: cover;
                 background-position: center;
                 height: 100vh; /* Full viewport height */
