--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             background-image: url('tjantik_icon.png'); /* Default image for desktop */
             background-size: cover;
             background-position: center;
-            height: 100vh; 
+            height: 700px;
             width: 100%;
             display: flex;
             align-items: center;
@@ -75,7 +75,7 @@
                 background-image: url('logotjantik.png'); /* Image for mobile */
                 background-size: cover;
                 background-position: center;
-                height: 50vh; /* Full viewport height */
+                height: 80vh; /* Full viewport height */
                 width: 100vw;  /* Full viewport width */
             }
 
