--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             background-image: url('tjantik_icon.png'); /* Default image for desktop */
             background-size: cover;
             background-position: center;
-            height: 700px;
+            height: 700px; 
             width: 100%;
             display: flex;
             align-items: center;
@@ -72,10 +72,10 @@
         /* Media Query for Mobile */
         @media (max-width: 768px) {
             .image-hero {
-                background-image: url('logotjantik.png'); /* Image for mobile */
+                background-image: url('logotjantik.jpg'); /* Image for mobile */
                 background-size: cover;
                 background-position: center;
-                height: 85vh; /* Full viewport height */
+                height: 100vh; /* Full viewport height */
                 width: 100vw;  /* Full viewport width */
             }
 
@@ -155,15 +155,17 @@
             }
 
             .sejarah-content h2 {
-                font-size: 16px;
+                font-size: 20px;
+                text-align: center;
             }
 
             .sejarah-content p {
-                font-size: 14px;
+                font-size: 16px;
+                text-align: center;
             }
 
             .vision h2, .mission h2 {
-            font-size: 16px; 
+            font-size: 20px; 
             font-weight: bold;
             text-align: center;
             margin-bottom: 20px;
@@ -172,10 +174,11 @@
             .vision ul, .mission ul {
                 list-style: none;
                 padding-left: 0;
+                text-align: center;
             }
 
             .vision li, .mission li {
-                font-size: 14px;
+                font-size: 16px;
                 margin: 10px 0;
             }
             
