--- a/index.html
+++ b/index.html
@@ -116,14 +116,22 @@
             background-color: #fff;
         }
 
-        .vision, .mission {
+        .vision{
+            flex: 1;
+            padding: 20px;
+            max-width: 45%;
+            text-align:center;
+            font-size: 20px;
+        }
+
+        .mission {
             flex: 1;
             padding: 20px;
             max-width: 45%;
         }
 
         .vision h2, .mission h2 {
-            font-size: 2rem; /* Adjusted font size */
+            font-size: 25px; 
             font-weight: bold;
             text-align: center;
             margin-bottom: 20px;
@@ -205,21 +213,19 @@
     <section id="visi-misi" class="vision-mission">
         <div class="vision">
             <h2>Visi</h2>
-            <ul>
-                <li>Menjadi produsen kebaya yang dikenal di Indonesia dan internasional.</li>
-                <li>Memadukan tradisi, kualitas, dan modernitas dalam setiap desain kebaya.</li>
-                <li>Melestarikan budaya Indonesia melalui desain kebaya yang estetis dan inovatif.</li>
-            </ul>
+            <p>
+                Menjadi produsen kebaya yang mendarat di Indonesia dan di pasar internasional yang dikenal dengan produknya kepercayaan merek, inovasi produk, dan layanan pelanggan yang unggul. Kami berkomitmen untuk melestarikan dan mempromosikan budaya tradisional Indonesia melalui desain kebaya yang modern dan estetis.
+            </p>
         </div>
         <div class="mission">
             <h2>Misi</h2>
             <ul>
-                <li>Menawarkan beragam desain kebaya yang disesuaikan dengan kebutuhan konsumen.</li>
-                <li>Menciptakan produk berkelanjutan yang memadukan tradisi, kualitas, dan modernitas.</li>
-                <li>Berinovasi melalui riset pasar untuk memenuhi preferensi pelanggan.</li>
-                <li>Berkolaborasi dengan perajin lokal untuk menampilkan warisan Indonesia.</li>
-                <li>Memastikan kepuasan dengan layanan luar biasa dan dukungan purna jual.</li>
-                <li>Mempromosikan kebaya sebagai simbol keindahan dan kebanggaan bangsa.</li>
+                <li>1. Menawarkan beragam desain kebaya yang disesuaikan dengan kebutuhan konsumen.</li>
+                <li>2. Menciptakan produk berkelanjutan yang memadukan tradisi, kualitas, dan modernitas.</li>
+                <li>3. Berinovasi melalui riset pasar untuk memenuhi preferensi pelanggan.</li>
+                <li>4. Berkolaborasi dengan perajin lokal untuk menampilkan warisan Indonesia.</li>
+                <li>5. Memastikan kepuasan dengan layanan luar biasa dan dukungan purna jual.</li>
+                <li>6. Mempromosikan kebaya sebagai simbol keindahan dan kebanggaan bangsa.</li>
             </ul>
         </div>
     </section>
