--- a/index.html
+++ b/index.html
@@ -100,12 +100,19 @@
             margin-bottom: 20px;
         }
 
+        .sejarah-content h3 {
+            font-size: 22px; /* Adjusted font size */
+            font-weight: bold;
+            margin-bottom: 8px;
+        }
+
         .sejarah-content p {
             font-size: 1.25rem; /* Adjusted font size */
             line-height: 1.6;
-            max-width: 800px;
+            max-width: 1000px;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 20px;
         }
 
         /* Vision and Mission Section */
@@ -192,6 +199,38 @@
             
         }
 
+        /* Product Catalog Section */
+        .product-catalog {
+            background-color: #712535;
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        .product-catalog h2 {
+            color: #fff;
+            font-size: 30px;
+            margin-bottom: 40px;
+        }
+
+        .product-catalog .catalog-item {
+            display: inline-block;
+            margin: 15px;
+            padding: 20px;
+            background-color: #f4f4f4;
+            border-radius: 8px;
+            width: 250px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .product-catalog .catalog-item img {
+            width: 100%;          /* Ensure image takes full width of the container */
+            height: 300px;        /* Set a fixed height */
+            object-fit: cover;    /* Ensures image doesn't get stretched or squished */
+            border-radius: 8px;
+        }
+
+
+
     </style>
 </head>
 <body>
@@ -206,8 +245,24 @@
     <section id="sejarah" class="sejarah-content">
         <h2>Sejarah Tjantik Kebaya</h2>
         <p>
-            Tjantik Kebaya Collection was founded with a mission to preserve and promote the traditional Indonesian Kebaya while blending modern aesthetics for today's fashion-conscious women. We strive to create timeless designs that reflect both tradition and innovation.
+            Kebaya adalah pakaian tradisional yang berasal dari Indonesia dan merupakan simbol budaya yang kaya. Tjantik Kebaya Collection adalah salah satu merek yang fokus pada pengembangan dan pelestarian kebaya dengan sentuhan modern. Merek ini biasanya mengedepankan penggunaan bahan-bahan berkualitas tinggi serta teknik pembuatan yang memperhatikan detail dan keanggunan.
         </p>
+        <p>
+            Sejarah kebaya sendiri dapat ditelusuri kembali ke zaman kerajaan di Indonesia, di mana pakaian ini banyak dikenakan oleh wanita-wanita bangsawan. Kebaya memiliki variasi yang berbeda-beda tergantung daerah asalnya, seperti kebaya encim, kebaya kutubaru, dan kebaya brokat. Kebaya mencerminkan keanggunan dan kehalusan, serta menjadi simbol identitas wanita Indonesia.
+        </p>
+        <p>
+            Tjantik Kebaya Collection berupaya untuk menggabungkan tradisi dengan inovasi, menciptakan desain-desain yang sesuai dengan kebutuhan dan gaya hidup wanita modern, sambil tetap mempertahankan nilai-nilai budaya yang terkandung dalam kebaya. Merek ini bisa jadi juga berperan dalam memperkenalkan dan mempopulerkan kebaya di kalangan generasi muda.
+        </p>
+        <p>
+            Dalam perkembangannya, Tjantik Kebaya Collection dan merek-merek sejenis lainnya sering kali terlibat dalam berbagai pameran dan acara fashion, serta aktif dalam kampanye yang mempromosikan kecintaan terhadap budaya Indonesia, khususnya dalam hal fashion tradisional.
+        </p>
+        <h3>
+            Lokasi Perusahaan
+        </h3>
+        <p>
+            Jl. Gatot Subroto No 56, 50721 Yogyakarta
+        </p>
+
     </section>
 
     <section id="visi-misi" class="vision-mission">
@@ -227,6 +282,30 @@
                 <li>5. Memastikan kepuasan dengan layanan luar biasa dan dukungan purna jual.</li>
                 <li>6. Mempromosikan kebaya sebagai simbol keindahan dan kebanggaan bangsa.</li>
             </ul>
+        </div>
+    </section>
+
+    <section id="product-catalog" class="product-catalog">
+        <h2>Product Catalog</h2>
+        <div class="catalog-item">
+            <img src="kebaya1.png" alt="Kebaya 1">
+            <h3>Kebaya Klasik</h3>
+            <p>Desain kebaya yang klasik dan elegan, menonjolkan warisan budaya dan cocok untuk acara formal.</p>
+        </div>
+        <div class="catalog-item">
+            <img src="beskap.jpg" alt="beskap">
+            <h3>Beskap Sutra Jawa</h3>
+            <p>Sutra ATBM bermotif tradisional berkilau, potongan pas berfuring penuh, dan kerah tinggi untuk kenyamanan formal nan eksklusif.</p>
+        </div>
+        <div class="catalog-item">
+            <img src="kebaya3.jpg" alt="Kebaya 3">
+            <h3>Kebaya Pengantin</h3>
+            <p>Kebaya eksklusif untuk hari pernikahan, dirancang dengan detail dan bahan berkualitas tinggi untuk momen istimewa tersebut.</p>
+        </div>
+        <div class="catalog-item">
+            <img src="kebaya4.jpg" alt="Kebaya 4">
+            <h3>Kebaya Modern</h3>
+            <p>Kebaya dengan sentuhan modern, menggabungkan tradisi dan tren mode terbaru, sempurna untuk berbagai kesempatan.</p>
         </div>
     </section>
 
