--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             display: flex;
             justify-content: space-between;
             padding: 60px 20px;
-            background-color: #fff;
+            background-color: #712535;
+            color: #fff;
         }
 
         .vision{
@@ -229,6 +230,35 @@
             border-radius: 8px;
         }
 
+        /* STAKEHOLDER */
+        .Stakeholder-Information {
+            padding: 60px 20px;
+            background-color: #c4a060; 
+            text-align: center;
+            color: #6f2436; 
+        }
+
+        .Stakeholder-Information h2 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .Stakeholder-Information h3 {
+            font-size: 22px; 
+            font-weight: bold;
+            margin-bottom: 8px;
+        }
+
+        .Stakeholder-Information p {
+            font-size: 1.25rem; 
+            line-height: 1.6;
+            max-width: 1000px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 20px;
+        }
+
 
 
     </style>
@@ -283,6 +313,55 @@
                 <li>6. Mempromosikan kebaya sebagai simbol keindahan dan kebanggaan bangsa.</li>
             </ul>
         </div>
+    </section>
+
+    <section id="Stakeholder" class="Stakeholder-Information">
+        <h2>
+            Stakeholder Information
+        </h2>
+        <h3>
+            Chief Executive Officer (CEO) - Lutfi Adi Nugroho 
+        </h3>
+        <P>
+            Tanggung jawab utama mereka adalah menetapkan arah strategis bisnis, menyelaraskannya tren pasar dan permintaan konsumen. Hal ini termasuk membuat rencana untuk pertumbuhan pendapatan, manajemen anggaran, dan suasana ritel premium. Mereka mengawasi semua departemen, membina kepemimpinan yang kuat untuk memotivasi tim, mendorong inovasi, dan mempertahankan merek warisan sambil menekankan keberlanjutan dan praktik ketenagakerjaan yang etis. Melalui ini Dalam upayanya, CEO memastikan kesuksesan jangka pendek dan pertumbuhan jangka panjang untuk kemewahan perusahaan mode.
+        </P>
+        <h3>
+            Direktur - Qotrunnada Zahra' Sukesi
+        </h3>
+        <p>
+            Direktur Tjantik Kebaya Collection memimpin operasional dan visi strategis, mengawasi aktivitas harian, desain, dan produksi sambil memastikan keselarasan dengan tren pasar.
+        </p>
+        <h3>
+            Finance Manager - Luthfiah Rachma Dwiyani  
+        </h3>
+        <p>
+            Manajer Keuangan di Tjantik Kebaya Collection mengawasi operasional keuangan, memastikan pelaporan yang akurat, dan pengelolaan anggaran yang efisien. Tugas utamanya meliputi memantau pengeluaran, menganalisis arus kas, mengoptimalkan biaya, merencanakan strategi keuangan, dan memberikan saran investasi. Mereka juga mendukung keputusan terkait penetapan harga dan ekspansi, dengan menyelaraskan tindakan keuangan dengan tujuan organisasi untuk pertumbuhan yang berkelanjutan.
+        </p>
+        <h3>
+            Product Manager - Dita Avreria  
+        </h3>
+        <p>
+            Manajer Produk di Tjantik Kebaya Collection memimpin pengembangan dan peluncuran lini pakaian. Mereka menentukan visi dan strategi produk, memastikan desain memenuhi kebutuhan pasar, serta memprioritaskan kebutuhan pelanggan. Bekerja sama dengan tim teknik, penjualan, dan pemasaran, mereka mencapai tujuan bisnis dan meningkatkan kepuasan pelanggan. Dengan keahlian teknis, mereka menyederhanakan proses, melakukan riset pasar, menganalisis pesaing, dan merekomendasikan harga, guna meningkatkan penawaran produk dan mendukung pertumbuhan bisnis.
+        </p>
+        <h3>
+            Public Relation Officer - Amanda Disya Andini
+        </h3>
+        <p>
+            Pejabat Hubungan Masyarakat di Tjantik Kebaya Collection mengelola hubungan publik dan komunikasi untuk meningkatkan visibilitas merek. Tugas utama mereka mencakup mengembangkan kampanye PR, menyusun siaran pers, dan membangun hubungan dengan media. Mereka juga mengelola media sosial, mempromosikan produk baru, dan mengorganisir acara untuk meningkatkan kesadaran merek. Dengan menyampaikan cerita merek, mereka membentuk persepsi publik dan menciptakan reputasi yang positif.  
+        </p>
+        <h3>
+            Marketing Manager - Nadya Kamilah Zahra
+        </h3>
+        <p>
+            Manajer Pemasaran di Tjantik Kebaya Collection mengembangkan strategi untuk meningkatkan visibilitas merek dan mendorong penjualan. Tanggung jawab utama meliputi menciptakan kampanye iklan, mengelola media sosial, merancang materi promosi, dan mengorganisir acara. Mereka menganalisis data pasar untuk menentukan penempatan produk, bekerja sama dalam branding, menjaga hubungan dengan influencer, dan memantau efektivitas kampanye. Semua ini bertujuan untuk menarik pelanggan setia dan memperkuat reputasi merek di dunia fashion mewah. 
+        </p>
+        <h3>
+            Sekretaris - Ine Afifah
+        </h3>
+        <p>
+            Sekretaris di Tjantik Kebaya Collection bertanggung jawab atas pengelolaan administrasi dan mendukung kegiatan operasional perusahaan.
+        </p>
+
     </section>
 
     <section id="product-catalog" class="product-catalog">
