--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
             }
 
             .vision h2, .mission h2 {
-            font-size: 20px; 
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 20px;
+                font-size: 20px; 
+                font-weight: bold;
+                text-align: center;
+                margin-bottom: 20px;
             }
 
             .vision ul, .mission ul {
@@ -197,6 +197,10 @@
                 font-size: 16px;
                 margin: 10px 0;
             }
+
+            .vision h2, .mission h2 {
+            max-width: 100px;
+        }
             
         }
 
@@ -259,7 +263,34 @@
             margin-bottom: 20px;
         }
 
+        /* Fasilitas */
+        .fasilitas-content {
+            padding: 60px 20px;
+            background-color: #c4a060;
+            text-align: center;
+            color: #6f2436; 
+        }
 
+        .fasilitas-content h2 {
+            font-size: 2.5rem; 
+            font-weight: bold;
+            margin-bottom: 60px;
+        }
+
+        .fasilitas-content h3 {
+            font-size: 2.0rem; 
+            font-weight: bold;
+            margin-bottom: 8px;
+        }
+
+        .fasilitas-content p {
+            font-size: 1.4rem;
+            line-height: 1.6;
+            max-width: 1000px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 20px;
+        }
 
     </style>
 </head>
@@ -292,7 +323,6 @@
         <p>
             Jl. Gatot Subroto No 56, 50721 Yogyakarta
         </p>
-
     </section>
 
     <section id="visi-misi" class="vision-mission">
@@ -329,7 +359,7 @@
             Direktur - Qotrunnada Zahra' Sukesi
         </h3>
         <p>
-            Direktur Tjantik Kebaya Collection memimpin operasional dan visi strategis, mengawasi aktivitas harian, desain, dan produksi sambil memastikan keselarasan dengan tren pasar.
+            Direktur Tjantik Kebaya Collection memimpin operasional dan visi strategis, mengawasi aktivitas harian, desain, dan produksi sambil memastikan keselarasan dengan tren pasar. Mengembangkan strategi pemasaran untuk meningkatkan visibilitas dan penjualan, membangun hubungan dengan pemasok demi menjaga kualitas, serta memimpin tim untuk mendukung misi butik. Dengan menyeimbangkan kreativitas dan bisnis, direktur mendorong kesuksesan finansial sekaligus mempertahankan reputasi merek sebagai simbol kualitas dan inovasi.
         </p>
         <h3>
             Finance Manager - Luthfiah Rachma Dwiyani  
@@ -359,7 +389,7 @@
             Sekretaris - Ine Afifah
         </h3>
         <p>
-            Sekretaris di Tjantik Kebaya Collection bertanggung jawab atas pengelolaan administrasi dan mendukung kegiatan operasional perusahaan.
+            Sekretaris di Tjantik Kebaya Collection bertanggung jawab mendukung operasional manajemen dengan memastikan administrasi berjalan secara efisien dan terorganisir. Tugas utamanya meliputi mengatur jadwal dan agenda pertemuan untuk manajemen, menyusun serta mendistribusikan dokumen, laporan, dan korespondensi resmi. Selain itu, sekretaris menangani panggilan telepon, email, serta komunikasi internal maupun eksternal, sambil mengelola arsip dan dokumen penting perusahaan. Dalam perannya, sekretaris juga mendukung persiapan acara, rapat, dan perjalanan dinas. Dengan menjaga kerahasiaan informasi perusahaan, sekretaris memastikan komunikasi antar departemen berjalan lancar dan membantu manajemen dalam mencapai tujuan perusahaan.
         </p>
 
     </section>
@@ -386,6 +416,24 @@
             <h3>Kebaya Modern</h3>
             <p>Kebaya dengan sentuhan modern, menggabungkan tradisi dan tren mode terbaru, sempurna untuk berbagai kesempatan.</p>
         </div>
+    </section>
+
+    <section id="fasilitas" class="fasilitas-content">
+        <h2>
+            Fasilitas yang disediakan tjantik kebaya collection seperti :
+        </h2>
+        <h3>
+            Layanan pemesanan khusus
+        </h3>
+        <p>
+            Pelanggan dapat memesan kebaya sesuai dengan keinginan dari mulai ukuran dan preferensi.
+        </p>
+        <h3>
+            Konsultasi desain         
+        </h3>
+        <p>
+            Tjantik Kebaya Collection menyiapkan tim ahli untuk membantu pelanggan dalam memilih desain.
+        </p>
     </section>
 
 </body>
