--- a/index.html
+++ b/index.html
@@ -197,6 +197,13 @@
                 font-size: 16px;
                 margin: 10px 0;
             }
+            .vision p, .mission p {
+                max-width: 90%; 
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 16px;
+                text-align: center;
+            }
         }
 
         /* Product Catalog Section */
